# DocuMind

./: README.md  environment.yml  main.py  pyproject.toml  replit.nix  requirements.txt
.streamlit/: secrets.toml
